# microblog-flask

./: .gitignore  README.md  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: python-package.yml
microblog/: .env.example  __init__.py  auth.py  config.py  db.py  schema.sql
microblog/auth/: __init__.py  decorators.py  forms.py  models.py  routes.py
microblog/auth/views/: _formhelpers.html
microblog/auth/views/auth/: login.html  register.html
microblog/blog/: __init__.py  forms.py  models.py  routes.py
microblog/blog/views/blog/: create.html  index.html
microblog/main/: __init__.py  routes.py
microblog/main/views/main/: index.html
microblog/static/: output.css  todos.js
microblog/templates/: 404.html  _paginghelpers.html  banner.html  base.html
microblog/templates/auth/: login.html
microblog/todo/: __init__.py  models.py  routes.py  todo.py
microblog/todo/views/todo/: index.html
migrations/versions/: 04b55c2349a0_.py  249e58d85248_.py  c0c7a7a5ff39_.py
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_todo.py
todo/: __init__.py  auth.py  db.py  todo.py
todo/templates/: base.html
todo/templates/auth/: register.html
todo/templates/todo/: index.html
