[project]
name = "todo"
version = "1.0.0"
description = "The basic todo app build in the Flask."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"


[tool.pytest.ini_options]
testpaths = ["test"]

[tool.coverage.run]
branch = true
source = ["todo"]
