[project]
name = "microblog"
version = "1.0.0"
description = "The basic microblog app build in the Flask."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"


[tool.pytest.ini_options]
testpaths = ["test"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.flake8]
max-line-length = 88
